--- a/src/app/pubspec.yaml
+++ b/src/app/pubspec.yaml
@@ -9,12 +9,27 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  
+  google_fonts: ^6.2.1
+  tray_manager: ^0.2.2
+  page_transition: ^2.1.0
+  flutter_hooks: ^0.20.5
+  hooks_riverpod: ^2.5.1
+  flutter_riverpod: ^2.5.1
+  riverpod_annotation: ^2.3.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^3.0.0
+  build_runner: ^2.4.9
+  custom_lint: ^0.6.4
+  flutter_lints: ^3.0.1
+  riverpod_lint: ^2.3.10
+  riverpod_generator: ^2.4.0
 
 flutter:
   uses-material-design: true
+
+  assets:
+  - assets/
